# pycoincol

./: .gitignore  README.md  coin_collection.py  database.py  index.py  main.py  notes_collection.py  pcgs.json  pcgs_notes.json  pcgs_sets.json  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: add_coin.html  add_note.html  coins.html  edit_coin.html  edit_notes.html  index.html  notes.html
templates/partials/: navbar.html
