[project]
name = "pycoincol"
version = "1.0.0"
description = "A Flask application for managing a coin collection"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "flask-wtf>=1.2.2",
    "requests",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "ruff>=0.4.0",
]
